# atcoder-rust-virtual

./: README.md  compete.toml  config  virtual.sh
5cfc34ef-fa52-44dc-a012-425e8abe0431/: Cargo.toml
5cfc34ef-fa52-44dc-a012-425e8abe0431/testcases/: 0.yml  1.yml  2.yml  3.yml  4.yml  5.yml  6.yml  7.yml
template/: Cargo.toml
